Done with the layout issue, working on mobile responsiveness

--- a/styles/aikstyles.css
+++ b/styles/aikstyles.css
@@ -15,13 +15,18 @@ p {
 
 p {
     opacity: 70%;
-    font-size: 0.9em;
+    font-size: 0.8em;
     line-height: 1.2rem;
+}
+
+figcaption{
+    margin-top: -5px;
 }
 
 figcaption>p {
     font-size: 0.7em;
     margin: 2px;
+    margin-top: 0;
     margin-bottom: 0;
 }
 
@@ -31,7 +36,7 @@ figcaption>p:last-child {
 
 h1,
 h2 {
-    font-size: 20px;
+    font-size: 1.2em;
     line-height: 1.6rem;
 }
 
@@ -44,13 +49,10 @@ body {
     display: grid;
     justify-content: center;
     align-content: center;
-    max-width: 100%;
-    grid-gap: 30px;
-    margin: 10%;
-}
-
-.container>div {
-    padding: 10px 22px;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto auto;
+    grid-gap: 15px;
+    margin: 8%;
 }
 
 figure {
@@ -79,61 +81,73 @@ figcaption {
     background-image: url('../images/bg-pattern-quotation.svg');
     background-repeat: no-repeat;
     background-position: top right;
-    grid-area: 1/1/5/4;
+    grid-area: 1/1/2/4;
+    padding: 10px 22px;
+    padding-bottom: 5px;
 }
 
 .cont2 {
     border: 1px solid hsl(217, 19%, 35%);
     border-radius: 5px;
     background-color: hsl(217, 19%, 35%);
-    grid-area: 1/4/5/5;
+    grid-area: 1/4/2/5;
+    padding: 10px 22px;
+    padding-bottom: 5px;
+    padding-right: 25px;   
 }
 
 .cont3 {
     border: 1px solid hsl(0, 0%, 100%);
     border-radius: 5px;
     background-color: hsl(0, 0%, 100%);
-    grid-area: 1/5/8/5;
+    grid-area: 1/5/8/6;
+    padding: 10px 22px;
+    padding-bottom: 5px;
 }
 
 .cont3>h2 {
-    color: hsl(219, 29%, 14%);
+    color: hsl(217, 19%, 35%);
 }
 
 
 .cont3>p {
-    color: hsl(219, 29%, 14%);
+    color: hsl(217, 19%, 35%);
+    max-width: 90%;
 }
 
 .cont3>figure>figcaption>p {
-    color: hsl(219, 29%, 14%);
+    color: hsl(217, 19%, 35%);
 }
 
 .cont4 {
     border: 1px solid hsl(0, 0%, 100%);
     border-radius: 5px;
     background-color: hsl(0, 0%, 100%);
-    grid-area: 5/1/8/2;
+    grid-area: 2/1/8/2;
+    padding: 10px 22px;
+    padding-bottom: 5px;
 }
 
 .cont4>h2 {
-    color: hsl(219, 29%, 14%);
+    color: hsl(217, 19%, 35%);
 }
 
 
 .cont4>p {
-    color: hsl(219, 29%, 14%);
+    color: hsl(217, 19%, 35%);
 }
 
 .cont4>figure>figcaption>p {
-    color: hsl(219, 29%, 14%);
+    color: hsl(217, 19%, 35%);
 }
 
 .cont5 {
     border: 1px solid hsl(219, 29%, 14%);
     border-radius: 5px;
     background-color: hsl(219, 29%, 14%);
-    grid-area: 5/2/8/5;
+    grid-area: 2/2/8/5;
+    padding: 10px 22px;
+    padding-bottom: 5px;
 }
 
 .attribution {
@@ -144,4 +158,30 @@ figcaption {
 
 .attribution a {
     color: hsl(228, 45%, 44%);
+}
+
+@media only screen and (min-width:375px) {
+    .container{
+        margin: 20px;
+    }
+    .cont1 {
+        grid-area: 1/1/5/4;
+    }
+
+    .cont2 {
+        grid-area: 5/1/6/4;
+    }
+
+    .cont3 {
+        grid-area: 10/1/14/4;
+    }
+
+    .cont4 {
+        grid-area: 6/1/7/4;
+    }
+
+    .cont5 {
+        grid-area: 7/1/9/4;
+    }
+    
 }
